--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="month_in">月度收入</string>
     <string name="month_out">月度支出</string>
     <string name="budget">预算剩余</string>
+    <string name="add_remark">添加备注</string>
+    <string name="remark">备注</string>
+    <string name="ensure">确定</string>
+    <string name="cancel">取消</string>
 </resources>
